[package]
name = "qrs_detector"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/bugadani/QrsDetector"
description = "Realtime ECG QRS detector algorithm"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2018"
categories = ["no-std", "algorithms"]
keywords = ["ecg"]
exclude = [
    ".github/*",
]

[dependencies]
sliding_window = "^0.1.0"
micromath = "^1.0.0"
if_chain = "1.0.0"
