[package]
name = "qrs_detector"
version = "0.3.0-dev"
license = "MIT"
repository = "https://github.com/bugadani/QrsDetector"
description = "Realtime ECG QRS detector algorithm"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
categories = ["no-std", "algorithms"]
keywords = ["ecg"]
exclude = [
    ".github/*",
]

[dependencies]
micromath = "^2.0.0"
